test/official_tests/operator/add_num_nil.lox
1 + nil; // error: {"line":1,"message":"Operator '+': incompatible types 'number' and 'nil'","type":"RuntimeError"}
